# forinstaller

./: README.md  setup.cfg  setup_develop.py
src/forinstaller/: packages.py
