[metadata]
name = forinstaller
version = 0.0.1
author = forcat2_team
author_email = artyom.vorobyov@gmail.com
description = Functions for forcat2 packages installation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/forcat2/forinstaller
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =

[options.packages.find]
where = src
